--- a/posts/p1.md
+++ b/posts/p1.md
@@ -1,2 +1,6 @@
 # 분홍색
-야옹
+이 작은 웹페이지 공간을 디자인하면서 내가 분홍색을 가장 좋아한다는 것을 확실하게 알게 된 것 같다.
+옷도 분홍색이 많고 무선이어폰도 분홍색이다. 초등학생 때 엄마가 사주신 분홍색 떡볶이코트가 마음에 들어서 많이 입고 다녔던 것 같다.
+분홍색과의 조합이 자연스러운 것도 좋아한다. 분홍색 토끼 인형, 분홍색 딸기우유, 분홍색 리본 같은 것들.
+메뉴 제목 부분을 참고하기 위해 해외 디자이너들의 홈페이지를 여러개 보았는데, 대부분 개성과 기교가 넘치게 꾸며두었다.
+나도 언젠가 그렇게 바꿀수도 있겠지만, 일단 나는 무언가 한번 사거나 만들면 오래 두기 때문에 일단은 이런 작품이 잘 보이고 직관적인 레이아웃으로 한동안 둘 생각이다.
