--- a/posts/p1.md
+++ b/posts/p1.md
@@ -1,4 +1,4 @@
 # 분홍색
 &nbsp;이 작은 웹페이지 공간을 디자인하면서 내가 분홍색을 가장 좋아한다는 것을 확실하게 알게 된 것 같다.  
-&nbsp;초등학생 때 엄마가 사주신 분홍색 떡볶이 코트가 마음에 들어서 자주 입고 다녔던 것 같다. 지금도 분홍색 옷이 많고, 무선이어폰도 분홍색이다.  
+&nbsp;초등학생 때 엄마가 사주신 분홍색 떡볶이 코트가 마음에 들어서 자주 입고 다녔다. 지금도 분홍색 옷이 많고, 무선이어폰도 분홍색이다.  
 &nbsp;분홍색과의 조합이 자연스러운 것도 좋아한다. 분홍색 토끼 인형, 분홍색 딸기우유, 분홍색 리본 같은 것들.
