--- a/posts/p2.md
+++ b/posts/p2.md
@@ -1,2 +1,16 @@
-# 옹
-야옹
+# 다락
+내 머리 꼭대기, 뇌의 가장 높은 다락방은 삼각형이다.
+그곳은 좁고 뾰족해서, 똑바로 서 있기보다는 웅크리기에 알맞다.
+
+벽은 거칠지 않다. 누군가 예리한 칼로 단번에 잘라낸 듯한 흑요석.
+그 검은 단면들은 거울처럼 나를 비추지만, 그 모습은 어둡고 차갑다.
+빛 한 점 없는 이곳에서 유일하게 움직이는 것은 바닥의 온도다.
+부글부글 끓어 넘치는 분노는 아니다. 그저 약한 불 위에 올려둔 수프처럼,
+생각들은 보글보글, 끊임없이 기포를 터트리며 점성을 유지한다.
+
+그 흑요석 방 한가운데에 내가 남긴 흔적이 있다.
+포장지를 뜯고 딱 한 입만 베어 물고 내려놓은 초콜릿 바.
+달콤함을 맛보려 했으나 끝내 다 삼키지 못한 미련일까, 아니면 충동적인 허기였을까.
+단단하고 날카로운 검은 방 안에서, 이빨 자국 난 초콜릿만이 유일하게 무르고 달다.
+
+나는 오늘도 그 보글거리는 소리를 들으며, 삼각형의 천장을 올려다본다.
